migrate to jsx, tsx too complex for simple project

--- a/src/assets/styles/avatar.scss
+++ b/src/assets/styles/avatar.scss
@@ -1,98 +1,102 @@
 .avatar-container {
-	position: relative;
-	display: flex;
-	align-items: center;
-	border-radius: 0.25rem;
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-radius: 0.25rem;
 
-	.avatar-user-name {
-		margin-right: 1rem;
-		color: var(--black);
-	}
+    .avatar-user-name {
+        margin-right: 1rem;
+        color: var(--black);
+    }
 
-	.dropdown-menu {
-		right: 0;
-		left: unset !important; /* override bootstrap */
-		border-radius: .35rem;
-		width: min-content;
-		overflow: hidden;
+    .dropdown-menu {
+        right: 0;
+        top: 50px;
+        left: unset !important; /* override bootstrap */
+        border-radius: 0.35rem;
+        width: min-content;
+        overflow: hidden;
 
-		a { display: block; }
-		background-color: var(--white);
+        a {
+            display: block;
+            text-decoration: none;
+        }
+        background-color: var(--white);
 
-		.dropdown-item {
-			color: var(--black);
-			font-weight: 500;
-			padding: .75rem 1.35rem;
+        .dropdown-item {
+            color: var(--black);
+            font-weight: 500;
+            padding: 0.75rem 1.35rem;
 
-			&.small {
-				span {
-					font-size: .8rem;
-					font-weight: normal !important;
-				}
-			}
+            &.small {
+                span {
+                    font-size: 0.8rem;
+                    font-weight: normal !important;
+                }
+            }
 
-			&.nohover {
-				&:hover {
-					background-color: unset;
-				}
-			}
-		}
+            &.nohover {
+                &:hover {
+                    background-color: unset;
+                }
+            }
+        }
 
-		.dropdown-item:active {
-			background-color: unset;
-			color: unset;
-		}
+        .dropdown-item:active {
+            background-color: unset;
+            color: unset;
+        }
 
-		.dropdown-item:hover {
-			background-color: var(--light-grey);
-		}
-	}
+        .dropdown-item:hover {
+            background-color: var(--light-grey);
+        }
+    }
 }
 
 .avatar {
-	display: flex;
-	width: 2.5rem;
-	height: 2.5rem;
-	min-width: 2.5rem;
-	min-height: 2.5rem;
-	border-radius: 50%;
-	background-color: var(--primary);
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	align-items: center;
-	justify-content: center;
-	cursor: pointer;
+    display: flex;
+    width: 2.5rem;
+    height: 2.5rem;
+    min-width: 2.5rem;
+    min-height: 2.5rem;
+    border-radius: 50%;
+    background-color: var(--primary);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 
-	span {
-		pointer-events: none;
-		color: #ffffff;
-		font-weight: 600;
-	}	
+    span {
+        pointer-events: none;
+        color: #ffffff;
+        font-weight: 600;
+    }
 }
 
 .avatar-upload {
-	width: 10rem;
-	height: 10rem;
+    width: 10rem;
+    height: 10rem;
 
-	span {
-		font-size: 5rem;
-	}
+    span {
+        font-size: 5rem;
+    }
 }
 
 .avatar-outline {
-	width: max-content;
-	border-radius: 50%;
+    width: max-content;
+    border-radius: 50%;
     border: 2px solid var(--black);
-	padding: 0.15rem;
+    padding: 0.15rem;
 }
 
 @media (max-width: 480px) {
-	.avatar-upload {
-		width: 5rem;
-		height: 5rem;
-		span {
-			font-size: 2.5rem;
-		}
-	}
+    .avatar-upload {
+        width: 5rem;
+        height: 5rem;
+        span {
+            font-size: 2.5rem;
+        }
+    }
 }
