--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,76 +1,113 @@
 $primary: #519a66;
-html { height: 100%; }
-body[themes=light] {
-	--white: #ffffff;
-	--secondary-white: #fcfcfc;
-	--secondary: #68be82;
-	
-	--light-grey: #dee2e6;
-	--dark-grey: #545454;
-	--grey: #a6a6a6;
-	--black: #404040;
+html {
+    height: 100%;
+}
+body[themes='light'] {
+    --white: #ffffff;
+    --secondary-white: #fcfcfc;
+    --secondary: #68be82;
+
+    --light-grey: #dee2e6;
+    --dark-grey: #545454;
+    --grey: #a6a6a6;
+    --black: #404040;
 }
 
-body[themes=dark] {	
-	--white: #3f3f3f;
-	--secondary-white: #272727;
-	--secondary: #68be82;
-	
-	--light-grey: #929292;
-	--dark-grey: #e9e9e9;
-	--grey: #767676;
-	--black: #fbfbfb;
+body[themes='dark'] {
+    --white: #3f3f3f;
+    --secondary-white: #272727;
+    --secondary: #68be82;
+
+    --light-grey: #929292;
+    --dark-grey: #e9e9e9;
+    --grey: #767676;
+    --black: #fbfbfb;
 }
 
 body {
-	--danger: rgb(186, 74, 74);
-	--success: rgb(81, 186, 81);
-	--warning: rgb(237, 186, 57);
-	--neutral: rgb(57, 189, 237);
-	
-	--primary: #{$primary};
-	--light-primary: #868a87;
+    --danger: rgb(186, 74, 74);
+    --success: rgb(81, 186, 81);
+    --warning: rgb(237, 186, 57);
+    --neutral: rgb(57, 189, 237);
 
-	height: 100%;
-	background-color: var(--white);
+    --primary: #{$primary};
+    --light-primary: #868a87;
 
-	h2, label { color: var(--black); }
+    height: 100%;
+    background-color: var(--white);
+
+    h2,
+    label {
+        color: var(--black);
+    }
 }
 
-.nowrap { white-space: nowrap; }
-.bold { font-weight: 600; }
-.pointer { cursor: pointer; }
+.nowrap {
+    white-space: nowrap;
+}
+.bold {
+    font-weight: 600;
+}
+.pointer {
+    cursor: pointer;
+}
 
 .row {
-	margin-right: 0px !important;
-	margin-left: 0px !important;
-	margin-bottom: 1rem;
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+    margin-bottom: 1rem;
 
-	> div {
-		padding: 0;
-	}
+    > div {
+        padding: 0;
+    }
 }
 
-p { white-space: pre-wrap; }
-:focus { outline: unset !important; }
+p {
+    white-space: pre-wrap;
+}
+:focus {
+    outline: unset !important;
+}
 
 /* text color */
-.text-primary { color: var(--primary) !important; }
-.text-secondary { color: var(--secondary) !important; }
-.text-grey { color: var(--grey) !important; }
-.text-black { color: var(--black) !important; }
+.text-primary {
+    color: var(--primary) !important;
+}
+.text-secondary {
+    color: var(--secondary) !important;
+}
+.text-grey {
+    color: var(--grey) !important;
+}
+.text-black {
+    color: var(--black) !important;
+}
 
-a:hover { text-decoration: none; }
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
 
 /* badge */
-.badge-primary { background-color: var(--primary); }
+.badge-primary {
+    background-color: var(--primary);
+}
 
 /* background */
-.bg-primary { background-color: var(--primary) !important; }
-.bg-secondary { background-color: var(--secondary) !important; }
+.bg-primary {
+    background-color: var(--primary) !important;
+}
+.bg-secondary {
+    background-color: var(--secondary) !important;
+}
 
 /* border */
-.border-bottom { border-bottom: 1px solid var(--grey) !important; }
+.border-bottom {
+    border-bottom: 1px solid var(--grey) !important;
+}
 
 @import 'header.scss';
 @import 'body.scss';
